# elvis_cpp_raft

./: CMakeLists.txt  README.md  main.cpp
log/: CMakeLists.txt  Log.cpp  Log.h
message/: CMakeLists.txt  Message.cpp  Message.h
network/: CMakeLists.txt  Server.cpp  Server.h
shell/: CMakeLists.txt  Shell.cpp  Shell.h
state/: CMakeLists.txt  Candidate.cpp  Candidate.h  Follower.cpp  Follower.h  Leader.cpp  Leader.h  State.cpp  State.h  Voter.cpp  Voter.h
